[tool.poetry]
name = 'gestutor-api'
version = '0.1.0'
description = ''
authors = ['Gustavo Alberico <gustavoalberico@gmail.com>']
readme = 'README.md'

[tool.poetry.dependencies]
python = '3.12.*'
fastapi = { extras = ['standard'], version = '^0.115.4' }


[tool.poetry.group.dev.dependencies]
ruff = '^0.7.1'
pytest = '^8.3.3'
pytest-cov = '^6.0.0'
taskipy = "^1.14.0"


[tool.pytest.ini_options]
pythonpath = '.'
addopts = ['-p no:warnings']

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev app/main.py'
pre_test = 'task lint'
test = 'pytest --cov=app -vv'
post_test = 'coverage html'
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'


[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
